[gd_scene format=3 uid="uid://comu6j41cmiuf"]

[ext_resource type="FontFile" uid="uid://cvoepn6wojfx0" path="res://assets/fonts/Xolonium-Regular.otf" id="1_06t4h"]
[ext_resource type="Script" uid="uid://twce241mbais" path="res://scripts/main_menu.gd" id="1_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0.34407574, 0.34407577, 0.3440756, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control" unique_id=1515577867]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Background" type="Panel" parent="." unique_id=228531596]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rhts7")

[node name="Title" type="Label" parent="." unique_id=1430809225]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.5
offset_top = -265.5
offset_right = 310.5
offset_bottom = -128.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 60
text = "Beneath the Mask
"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1368606903]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -111.0
offset_right = 139.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="StartButton" type="Button" parent="VBoxContainer" unique_id=882335574]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 54
text = "Start
"

[node name="ExitButton" type="Button" parent="VBoxContainer" unique_id=963866028]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 54
text = "Exit
"

[node name="FadePanel" type="Panel" parent="." unique_id=94213024]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ekxnf")

[connection signal="focus_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
